--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,3 +29,6 @@ jobs:
       with:
         github_token: ${{secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
+        force_orphan: true
+        publish_branch: gh-pages  # 明确指定分支名
+        
