--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",  
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "element-plus": "^2.11.3",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "gh-pages": "^6.3.0",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-element-plus": "^0.10.0",
     "unplugin-vue-components": "^29.0.0",
