--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "element-plus": "^2.11.3",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
